# mask2bbox

./: Dockerfile  ESSENTIAL_LICENSE_CONDITIONS.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: docker-publish.yml  python-package-windows.yml  python-package.yml
mask2bbox/: __init__.py  __main__.py  _bboxes.py  logger.py
mask2bbox/scripts/: get_average_iou.py  isolate_cells.py
scripts/: isolate-cells-from-file.py  isolate-cells.py
